switch positioning of cards

--- a/card-options.html
+++ b/card-options.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">Tobin's Website</h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal">Widget Examples</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="#">Features</a>
     <a class="p-2 text-dark" href="#">Enterprise</a>
@@ -51,28 +51,7 @@
 </div>
 
 <div class="container">
-	<div class="row">
-    <div class="col-md-4" style="padding: 0;">
-      <p>Simple button rendering <b>with</b> price</p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
-      <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
-      </script>
-      <div style="margin-top: 16px;">
-        <p>Simple button rendering <b>without</b> price</p>
-        <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
-        <script>
-          knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
-        </script>
-      </div>
-    </div>
-    <div class="col-md-4" style="padding: 0;">
-      <p>Card <b>without</b> cover</p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>
-      <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
-      </script>
-    </div>
+    <div class="row">
     <div class="col-md-4" style="padding: 0;">
       <p>Card <b>with</b> cover</p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>
@@ -94,8 +73,28 @@
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-f'), {id:"abc0002",style:"wide", align:"right"});
       </script>
     </div>
-
-	</div>
+    <div class="col-md-4" style="padding: 0;">
+      <p>Simple button rendering <b>with</b> price</p>
+      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
+      <script>
+        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
+      </script>
+      <div style="margin-top: 16px;">
+        <p>Simple button rendering <b>without</b> price</p>
+        <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
+        <script>
+          knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
+        </script>
+      </div>
+    </div>
+    <div class="col-md-4" style="padding: 0;">
+      <p>Card <b>without</b> cover</p>
+      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>
+      <script>
+        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
+      </script>
+    </div>
+    </div>
   
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
