Heading & font changes

--- a/card-options.html
+++ b/card-options.html
@@ -46,8 +46,8 @@
 </div>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">My Services</h1>
-  <p class="lead">Below are services I currently offer.</p>
+  <h1 class="display-4">Sample Widget Blocks</h1>
+  <p class="lead">Widgets Can Be Easily Customized and Embedded Anywhere</p>
 </div>
 
 <div class="container">
@@ -67,7 +67,7 @@
       </script>
     </div>
     <div class="col-md-4" style="padding: 0;">
-      <p>Card <b>with</b> cover</p>
+      <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
