--- a/card-options.html
+++ b/card-options.html
@@ -52,7 +52,7 @@
 
 <div class="container">
     <div class="row">
-    <div class="my-0 mr-md-auto font-weight-normal">" style="padding: 0;">
+    <div class="my-0 mr-md-auto font-weight-normal" style="padding: 0;">
       <p>Wide card <b>Cover Left</b></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>
       <script>
