--- a/card-options.html
+++ b/card-options.html
@@ -52,15 +52,15 @@
 
 <div class="container">
     <div class="row">
-    <div class="my-0 mr-md-auto font-weight-normal" style="padding: 0;">
-      <p>Wide card <b>Cover Left</b></p>
+    <div class="col-md-4" style="padding: 0;">
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-e'), {id:"abc0002",style:"wide"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-      <p>Wide card <b>Cover Right</b></p>
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Right</b></h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-f'), {id:"abc0002",style:"wide", align:"right"});
@@ -74,20 +74,20 @@
       </script>
     </div>
     <div class="col-md-4" style="padding: 0;">
-      <p>Card <b>without</b> cover</p>
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>without</b> cover</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
       </script>
     </div>
     <div class="col-md-4" style="padding: 0;">
-      <p>Simple button rendering <b>with</b> price</p>
+      <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>with</b> price</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
       </script>
       <div style="margin-top: 16px;">
-        <p>Simple button rendering <b>without</b> price</p>
+        <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>without</b> price</h5></p>
         <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
         <script>
           knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
