--- a/card-options.html
+++ b/card-options.html
@@ -52,7 +52,7 @@
 
 <div class="container">
     <div class="row">
-    <div class="col-md-4" style="padding: 0;">
+    <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>
       <script>
@@ -66,27 +66,28 @@
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-f'), {id:"abc0002",style:"wide", align:"right"});
       </script>
     </div>
-    <div class="col-md-4" style="padding: 0;">
+    <div class="col-md-6" style="padding: 0;">
       <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
       </script>
     </div>
-    <div class="col-md-4" style="padding: 0;">
+    <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>without</b> cover</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
       </script>
     </div>
-    <div class="col-md-4" style="padding: 0;">
+    <div class="col-md-6" style="padding: 0;">
       <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>with</b> price</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
       </script>
-      <div style="margin-top: 16px;">
+    </div>
+    <div class="col-md-6" style="padding: 0;">
         <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>without</b> price</h5></p>
         <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
         <script>
