adding new widgets

--- a/card-options.html
+++ b/card-options.html
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="pricing.css" rel="stylesheet">
+    <link href="cover.css" rel="stylesheet">
     <script src="https://staging-api.knowledgeup.com/widget/1.0/embed.js"></script>
   </head>
   <body>
@@ -68,9 +68,11 @@
     </div>
     <div class="col-md-6" style="padding: 0;">
       <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+<--	  <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
+        //knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
+	knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
