--- a/card-options.html
+++ b/card-options.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Sample Widget Blocks</h1>
+  <h1 class="display-3 font-weight-bold">Sample Widget Blocks</h1>
   <p class="lead">Widgets Can Be Easily Customized and Embedded Anywhere</p>
 </div>
 
@@ -54,22 +54,24 @@
     <div class="row">
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+<!--      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-e'), {id:"abc0002",style:"wide"});
+        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Right</b></h5></p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+<!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-f'), {id:"abc0002",style:"wide", align:"right"});
+        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
       <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
-<--	  <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>-->
+<!--	  <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>-->
       <script>
         //knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
 	knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true});
@@ -77,9 +79,11 @@
     </div>
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>without</b> cover</h5></p>
-      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+<!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
+//        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
+	knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:false});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
@@ -98,7 +102,7 @@
       </div>
     </div>
     </div>
-  
+<!--  
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
@@ -135,7 +139,9 @@
         </ul>
       </div>
     </div>
+  </div>
   </footer>
+-->
 </div>
 </body>
 </html>
