--- a/card-options.html
+++ b/card-options.html
@@ -46,8 +46,8 @@
 </div>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-3 font-weight-bold">Sample Widget Blocks</h1>
-  <p class="lead">Widgets Can Be Easily Customized and Embedded Anywhere</p>
+  <h1 class="display-3 font-weight-bold">Sample Card Formats</h1>
+  <p class="lead">Widgets Are Customizable and Embeddable Anywhere</p>
 </div>
 
 <div class="container">
@@ -65,7 +65,7 @@
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
+        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true; align:"right"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
@@ -100,7 +100,6 @@
           knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
         </script>
       </div>
-    </div>
     </div>
 <!--  
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
