--- a/card-options.html
+++ b/card-options.html
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="pricing.css" rel="stylesheet">
     <script src="https://staging-api.knowledgeup.com/widget/1.0/embed.js"></script>
   </head>
   <body>
@@ -65,7 +65,7 @@
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true; align:"right"});
+        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", showCover:true; align:"right"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
@@ -101,6 +101,7 @@
         </script>
       </div>
     </div>
+</div>
 <!--  
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
