--- a/card-options.html
+++ b/card-options.html
@@ -65,7 +65,7 @@
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", showCover:true; align:"right"});
+        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
