--- a/card-options.html
+++ b/card-options.html
@@ -54,7 +54,7 @@
     <div class="row">
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10-a">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
 <!--      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>-->
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide"});
@@ -62,7 +62,7 @@
     </div>
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Right</b></h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10-b">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
