--- a/card-options.html
+++ b/card-options.html
@@ -54,36 +54,36 @@
     <div class="row">
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-1">Magical Resume Review with Jill Sanders</a>
 <!--      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide"});
+        knowledgeup.initialize(document.getElementById('knowledgeup-1'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Right</b></h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-2">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
-        knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
+        knowledgeup.initialize(document.getElementById('knowledgeup-2'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"wide", align:"right"});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
       <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-3">Magical Resume Review with Jill Sanders</a>
 <!--	  <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>-->
       <script>
         //knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-c'), {id:"abc0002",style:"card", showCover:true});
-	knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true});
+	knowledgeup.initialize(document.getElementById('knowledgeup-3'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:true});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
 	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>without</b> cover</h5></p>
-	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup">Magical Resume Review with Jill Sanders</a>
+	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-4">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>-->
       <script>
 //        knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-d'), {id:"abc0002",style:"card", showCover:false});
-	knowledgeup.initialize(document.getElementById('knowledgeup'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:false});
+	knowledgeup.initialize(document.getElementById('knowledgeup-4'), {id:"c50576396477c07e76f6f0bd17c769b22adce8fa16489ef565844221145aba10",style:"card", showCover:false});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
