--- a/card-options.html
+++ b/card-options.html
@@ -46,14 +46,14 @@
 </div>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-3 font-weight-bold">Sample Card Formats</h1>
-  <p class="lead">Widgets Are Customizable and Embeddable Anywhere</p>
+  <h1 class="display-4 font-weight-bold">Knowledge Up Card Formats</h1>
+  <p class="lead">These widgets can be customized to your style and can be embedded anywhere</p>
 </div>
 
 <div class="container">
     <div class="row">
     <div class="col-md-6" style="padding: 0;">
-	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Left</b></h5></p>
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card - Wide <b>with left cover</b></h5></p>
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-1">Magical Resume Review with Jill Sanders</a>
 <!--      <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-e">Technical Interview Practice with Daisy Ko</a>-->
       <script>
@@ -61,7 +61,7 @@
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Wide card <b>Cover Right</b></h5></p>
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card - Wide <b>with right cover</b></h5></p>
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-2">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-f">Technical Interview Practice with Daisy Ko</a>-->
       <script>
@@ -69,7 +69,7 @@
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-      <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>with</b> cover</h5></p>
+      <p><h5 class="my-0 mr-md-auto font-weight-normal">Card - standard <b>with</b> cover</h5></p>
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-3">Magical Resume Review with Jill Sanders</a>
 <!--	  <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-c">Technical Interview Practice with Daisy Ko</a>-->
       <script>
@@ -78,7 +78,7 @@
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card <b>without</b> cover</h5></p>
+	    <p><h5 class="my-0 mr-md-auto font-weight-normal">Card - standard <b>without</b> cover</h5></p>
 	<a href="https://staging.knowledgeup.com/career-coaching/magical-resume-review-with-jill-sanders" id="knowledgeup-4">Magical Resume Review with Jill Sanders</a>
 <!--	<a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-d">Technical Interview Practice with Daisy Ko</a>-->
       <script>
@@ -87,14 +87,14 @@
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-      <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>with</b> price</h5></p>
+      <p><h5 class="my-0 mr-md-auto font-weight-normal">Button Only - <b>with</b> price</h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-        <p><h5 class="my-0 mr-md-auto font-weight-normal">Simple button rendering <b>without</b> price</h5></p>
+        <p><h5 class="my-0 mr-md-auto font-weight-normal">Button only <b>without</b> price</h5></p>
         <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
         <script>
           knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
