--- a/card-options.html
+++ b/card-options.html
@@ -87,14 +87,14 @@
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-      <p><h5 class="my-0 mr-md-auto font-weight-normal">Button Only - <b>with</b> price</h5></p>
+      <p><h5 class="my-0 mr-md-auto font-weight-normal">Button Only - <b>with price</b></h5></p>
       <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-a">Technical Interview Practice with Daisy Ko</a>
       <script>
         knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-a'), {id:"abc0002",style:"button", showPrice:true});
       </script>
     </div>
     <div class="col-md-6" style="padding: 0;">
-        <p><h5 class="my-0 mr-md-auto font-weight-normal">Button only <b>without</b> price</h5></p>
+        <p><h5 class="my-0 mr-md-auto font-weight-normal">Button Only - <b>without price</b></h5></p>
         <a href="http://staging.knowledgeup.com/book/abc0002" id="knowledgeup-abc0002-b">Technical Interview Practice with Daisy Ko</a>
         <script>
           knowledgeup.initialize(document.getElementById('knowledgeup-abc0002-b'), {id:"abc0002",style:"button"});
