Testing widget code from customization page

--- a/index.html
+++ b/index.html
@@ -39,10 +39,32 @@
               <p class="lead">My mission is to help leaders perform at higher levels and build more resilient and humane organizations.</p>
               <p class="lead">I’m available for One-on-One leadership coaching sessions to help you advance the growth of your team.</p>
               <div class="knowledgeup">
-                <a href="http://staging.knowledgeup.com/book/abc0004" id="knowledgeup-abc0002">Leadership Development with Eric Ward</a>
+                <a href="https://staging.knowledgeup.com/natalie-zises/intro-and-strategy-session" id="knowledgeup">Introduction + Strategy Session with Natalie Zises</a>
                 <script>
-                  knowledgeup.initialize(document.getElementById('knowledgeup-abc0002'), {id:"abc0004", showPrice:true, background:'white', color:'#333', shadow: 'none'});
-                </script>
+                  KnowledgeUp.init(document.getElementById('knowledgeup'),{
+                  "id": "49018ef2975b14ff1abc761347c7f0f6fe5bd3146645699829b7896b5e261bcc",
+                  "type": "card",
+                  "button": {
+                  "text": "Book Now",
+                  "style": {
+                  "backgroundColor": "rgba(74,144,226,1)",
+                  "color": "rgba(255,255,255,1)"
+                  }
+                },
+              "price": {
+                "hidden": false,
+                 "style": {
+                "color": "rgba(74,144,226,1)"
+                  }
+                },
+              "cover": {
+              "hidden": false,
+              "style": {
+              "backgroundColor": "rgba(223,223,223,1)"
+                }
+              }
+            }); 
+            </script>
               </div>
             </div>
           </div>
