--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="cover.css" rel="stylesheet">
-    <script src="https://staging-api.knowledgeup.com/widget/1.0/embed.js"></script>    
+    <script src="https://staging-widget.knowledgeup.com/embed.js"></script>    
   </head>
   <body>
     <div class="d-flex w-100 p-3 mx-auto flex-column">
