--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Eric Kogan · Leadership Development</title>
+    <title>Min's Blog · Leadership Development</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="cover.css" rel="stylesheet">
@@ -16,7 +16,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm">
-                <h3 class="masthead-brand">Eric Kogan</h3>
+                <h3 class="masthead-brand">Min's Blog</h3>
                 <nav class="nav nav-masthead justify-content-center">
                   <a class="nav-link" href="#">About</a>
                   <a class="nav-link active" href="#">Coaching</a>
@@ -32,9 +32,10 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-5">
-              <h1>Leadership Development</h1>
-              <p class="lead">My mission is to help leaders perform at higher levels and build more resilient and humane organizations.</p>
-              <p class="lead">I’m available for One-on-One leadership coaching sessions to help you advance the growth of your team.</p>             
+              <h1>Coaching</h1>
+              <p class="lead">Over the years, I've spoken to many professionals to help me work through challenging situations. While everyone's circumstances are unique, I believe the toolsets that you learn from therapy sessions can apply broadly.</p>
+              <p class="lead">Here I'd like to share some folks that I've worked with who helped to transformed my approach to life, to food, to happiness.</p>             
+              <p class="lead">Natlaie is someone who I connected with immediately - her personable yet structured approach was just what I need to start the transition I wanted to have. She will be offering an Introduction & strategy session to all new patients!</p>                           
             </div>
             <div class="col-sm-5">
               <div class="knowledgeup">
