--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-5">
-              <h1>Coaching</h1>
-              <p class="lead">Over the years, I've spoken to many professionals to help me work through challenging situations. While everyone's circumstances are unique, I believe the toolsets that you learn from therapy sessions can apply broadly.</p>
-              <p class="lead">Here I'd like to share some folks that I've worked with who helped to transformed my approach to life, to food, to happiness.</p>             
-              <p class="lead">Natlaie is someone who I connected with immediately - her personable yet structured approach was just what I need to start the transition I wanted to have. She will be offering an Introduction & strategy session to all new patients!</p>                           
+              <h1>Thoughts on Coaching</h1>
+              <p class="lead">I've worked with various professionals during challenging situations. While everyone's circumstances are unique, I believe the toolsets that you learn from therapy sessions can apply broadly.</p>
+              <p class="lead">Natlaie is someone who I connected with immediately - her personable, yet structured approach was just what I need to start the transition I was looking for.</p>                           
+              <p class="lead">Check out her intro session if you'd like to learn more!</p>
             </div>
             <div class="col-sm-5">
               <div class="knowledgeup">
